Implemented PUT and DELETE session
